# RT

./: .gitignore  CMakeLists.txt  Makefile  author  config.rt
includes/: rt.h
libft/: Makefile  author  ft_arrnew.c  ft_atof.c  ft_atoi.c  ft_atoi_base.c  ft_bzero.c  ft_chrcnt.c  ft_free2d.c  ft_free3d.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstaddend.c  ft_lstdel.c  ft_lstdelemp.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstpst.c  ft_lstsearch.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_memswap.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  (+37 more)
libft/includes/: libft.h
libgm/: Makefile  gm_init_float.c  gm_init_int.c  gm_mat_create.c  gm_mat_create_from_vec.c  gm_mat_init_identity.c  gm_mat_inversion.c  gm_mat_mult.c  gm_mat_pnt_mult.c  gm_mat_transpose.c  gm_vec_add.c  gm_vec_alp_mult.c  gm_vec_cos.c  gm_vec_dot.c  gm_vec_len.c  gm_vec_len_sqr.c  gm_vec_mat_mult.c  gm_vec_minus.c  gm_vec_mult.c  gm_vec_normalize.c  gm_vec_ortog.c  gm_vec_reflect.c  gm_vec_subtract.c  gm_vec_vec_rotate.c
libgm/include/: libgm.h
src/: cone.c  control.c  cylinder.c  get_pixel_color.c  image.c  init_scene.c  lightning.c  main.c  parse.c  plane.c  read_scene.c  sphere.c
